# remoting

./: CMakeLists.txt  tightvnc.sln  tightvnc2017.sln
aaa_log_writer/: CMakeLists.txt  FileAccount.cpp  FileAccount.h  FileLogger.cpp  FileLogger.h  LogWriter.cpp  LogWriter.h  Logger.h  ProfileLogger.cpp  ProfileLogger.h  _.h  aaa_LogDump.cpp  aaa_LogDump.h  log_writer.vcproj  matter.txt  remoting_log_writer.vcxproj  remoting_log_writer.vcxproj.filters
common/: CMakeLists.txt  EOFException.cpp  EOFException.h  _.h  remoting.cpp  remoting.h
config_lib/: CMakeLists.txt  ConnectionHistory.cpp  ConnectionHistory.h  IniFileSettingsManager.cpp  IniFileSettingsManager.h  RegistrySettingsManager.cpp  RegistrySettingsManager.h  SettingsManager.cpp  SettingsManager.h  config_lib.vcxproj  config_lib.vcxproj.filters  remoting_config_lib.vcxproj
control_desktop/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ConnectCommand.cpp  ConnectCommand.h  ConnectStringParser.cpp  ConnectStringParser.h  ControlApplication.cpp  ControlApplication.h  ControlAuth.cpp  ControlAuth.h  ControlAuthDialog.cpp  ControlAuthException.cpp  ControlAuthException.h  ControlCommand.cpp  ControlCommand.h  ControlCommandLine.cpp  ControlCommandLine.h  ControlGate.h  ControlMessage.cpp  ControlMessage.h  ControlPipeName.cpp  ControlPipeName.h  ControlProto.h  ControlProxy.cpp  ControlProxy.h  ControlTrayIcon.cpp  ControlTrayIcon.h  DisconnectAllCommand.cpp  DisconnectAllCommand.h  MakeRfbConnectionCommand.cpp  MakeRfbConnectionCommand.h  NamedPipeTransport.cpp  NamedPipeTransport.h  Notificator.cpp  Notificator.h  OutgoingConnectionDialog.cpp  OutgoingConnectionDialog.h  ReloadConfigCommand.cpp  ReloadConfigCommand.h  (+34 more)
desktop_ipc/: BlockingGate.cpp  BlockingGate.h  BlockingInputGate.cpp  BlockingInputGate.h  BlockingOutputGate.cpp  BlockingOutputGate.h  CMakeLists.txt  ClientListener.cpp  ClientListener.h  ConfigServer.cpp  ConfigServer.h  DesktopConfigClient.cpp  DesktopConfigClient.h  DesktopServerProto.cpp  DesktopServerProto.h  DesktopSrvDispatcher.cpp  DesktopSrvDispatcher.h  GateKickHandler.cpp  GateKickHandler.h  GateKicker.cpp  GateKicker.h  ReconnectException.cpp  ReconnectException.h  ReconnectingChannel.cpp  ReconnectingChannel.h  ReconnectionListener.h  UpdateHandlerClient.cpp  UpdateHandlerClient.h  UpdateHandlerServer.cpp  UpdateHandlerServer.h  UserInputClient.cpp  UserInputClient.h  UserInputServer.cpp  UserInputServer.h  desktop_ipc.vcxproj  matter.txt  remoting_desktop_ipc.vcxproj  remoting_desktop_ipc.vcxproj.filters
file_lib/: CMakeLists.txt  EOFException.cpp  EOFException.h  File.cpp  File.h  FileChannel.h  FileNotFoundException.cpp  FileNotFoundException.h  WinFile.cpp  WinFile.h  WinFileChannel.cpp  WinFileChannel.h  file_lib.vcxproj  file_lib.vcxproj.filters
ft_common/: CMakeLists.txt  FTMessage.cpp  FTMessage.h  FileInfo.cpp  FileInfo.h  FileTransferException.cpp  FileTransferException.h  FolderListener.cpp  FolderListener.h  OperationNotSupportedException.cpp  OperationNotSupportedException.h  WinFilePath.cpp  WinFilePath.h  _.h  ft_common.vcxproj  remoting_ft_common.vcxproj
gui/: BalloonTip.cpp  BalloonTip.h  BaseDialog.cpp  BaseDialog.h  BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  CommonControlsEx.cpp  CommonControlsEx.h  Control.cpp  Control.h  DibFrameBuffer.cpp  DibFrameBuffer.h  FilteredTextBox.cpp  FilteredTextBox.h  ImagedButton.cpp  ImagedButton.h  ListBox.cpp  ListBox.h  ListView.cpp  ListView.h  Menu.cpp  Menu.h  MessageWindow.cpp  MessageWindow.h  NotifyIcon.cpp  NotifyIcon.h  NotifyIconWindow.cpp  NotifyIconWindow.h  PaintWindow.cpp  PaintWindow.h  ProgressBar.cpp  ProgressBar.h  ScrollBar.cpp  ScrollBar.h  SpinControl.cpp  (+31 more)
libjpeg/: CMakeLists.txt  jcapimin.c  jccoefct.c  jcdctmgr.c  jchuff.c  jcomapi.c  jctrans.c  jdcoefct.c  jdhuff.c  jdmainct.c  jdmarker.c  jdmerge.c  jdsample.c  jerror.c  jerror.h  jfdctfst.c  jfdctint.c  jmemmgr.c  jpeglib.h  jquant1.c  jquant2.c  libjpeg.vcxproj  remoting_libjpeg.vcxproj
log_writer/: CMakeLists.txt  FileAccount.cpp  FileAccount.h  FileLogger.cpp  FileLogger.h  LogDump.cpp  LogDump.h  LogWriter.cpp  LogWriter.h  Logger.h  ProfileLogger.cpp  ProfileLogger.h  log_writer.vcproj  log_writer.vcxproj  log_writer.vcxproj.filters  remoting_log_writer.vcxproj
node_desktop/: AdditionalActionApplication.cpp  AdditionalActionApplication.h  AuthTracker.cpp  AuthTracker.h  BuildTime.cpp  BuildTime.h  CMakeLists.txt  ControlAppAuthenticator.cpp  ControlAppAuthenticator.h  ControlClient.cpp  ControlClient.h  ControlServer.cpp  ControlServer.h  CrashHook.cpp  CrashHook.h  DesktopServerApplication.cpp  DesktopServerApplication.h  DesktopServerCommandLine.cpp  DesktopServerCommandLine.h  EventLogWriter.cpp  EventLogWriter.h  ExtraRfbServers.cpp  ExtraRfbServers.h  LogInitListener.h  NamingDefs.cpp  NamingDefs.h  NewConnectionEvents.h  OutgoingRfbConnectionThread.cpp  OutgoingRfbConnectionThread.h  QueryConnectionApplication.cpp  QueryConnectionApplication.h  QueryConnectionCommandLine.cpp  QueryConnectionCommandLine.h  QueryConnectionDialog.cpp  QueryConnectionDialog.h  RfbClientManager.cpp  RfbClientManager.h  RfbClientManagerEventListener.cpp  RfbClientManagerEventListener.h  RfbServer.cpp  (+46 more)
remoting/: AboutDialog.cpp  AboutDialog.h  AuthenticationDialog.cpp  AuthenticationDialog.h  BuildTime.cpp  BuildTime.h  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConnectingDialog.cpp  ConnectingDialog.h  ConnectionData.cpp  ConnectionData.h  ConnectionListener.cpp  ConnectionListener.h  ControlTrayIcon.cpp  ControlTrayIcon.h  DesktopWindow.cpp  DesktopWindow.h  FileExistDialog.cpp  FileExistDialog.h  FileInfoListView.cpp  FileInfoListView.h  FileRenameDialog.cpp  FileRenameDialog.h  FileTransferMainDialog.cpp  FileTransferMainDialog.h  FsWarningDialog.cpp  FsWarningDialog.h  HelpDialog.cpp  HelpDialog.h  LoginDialog.cpp  LoginDialog.h  NamingDefs.cpp  NamingDefs.h  NewFolderDialog.cpp  NewFolderDialog.h  OptionsDialog.cpp  OptionsDialog.h  ResourceStrings.cpp  (+45 more)
remoting_common/: _.h  (+7 more)
(+5876 files in other folders)
