cmake_minimum_required(VERSION 3.16)
project(remoting)



add_subdirectory(client_config_lib)
#add_subdirectory(config_lib)
#add_subdirectory(desktop)
#add_subdirectory(desktop_ipc)
#add_subdirectory(fb_update_sender)
#add_subdirectory(file_lib)
#add_subdirectory(ft_client_lib)
#add_subdirectory(ft_common)
#add_subdirectory(ft_server_lib)
add_subdirectory(gui)
#add_subdirectory(hookldr)
#add_subdirectory(http_server_lib)
#add_subdirectory(io_lib)
add_subdirectory(libjpeg)
#add_subdirectory(log_server)
#add_subdirectory(log_writer)
#add_subdirectory(matter)
add_subdirectory(network)
#add_subdirectory(region)
#add_subdirectory(remoting_control_desktop)
add_subdirectory(remoting_impact)
#add_subdirectory(remoting_node)
#add_subdirectory(remoting_node_desktop)
#add_subdirectory(rfb)
#add_subdirectory(rfb_sconn)
#add_subdirectory(screen_hooks)
#add_subdirectory(server_config_lib)
#add_subdirectory(setup_helper)
add_subdirectory(thread)
add_subdirectory(util)
add_subdirectory(viewer_core)
#add_subdirectory(viewer_keysym_test)
#add_subdirectory(win_event_log)
#add_subdirectory(win_system)
#add_subdirectory(wix_installer)
#add_subdirectory(wsconfig_lib)
#add_subdirectory(x64)
add_subdirectory(zlib)
